--- a/workspace/xdebug.ini
+++ b/workspace/xdebug.ini
@@ -1,8 +1,8 @@
 ; NOTE: The actual debug.so extention is NOT SET HERE but rather (/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini)
-
-xdebug.remote_host="host.docker.internal"
+; lalalal
+xdebug.remote_host=dockerhost
 xdebug.remote_connect_back=0
-xdebug.remote_port=9000
+xdebug.remote_port=9001
 xdebug.idekey=PHPSTORM
 
 xdebug.remote_autostart=0
